Fix for Category Headers shifting * Fix to stop category titles from shifting when font awesome   fonts load in

--- a/app/scss/epochtalk.scss
+++ b/app/scss/epochtalk.scss
@@ -79,7 +79,7 @@
   font-size: 14px;
   margin-top: 5px;
   margin-bottom: 5px; }
-.collapse-btn { font-size: 1.45em; margin-right: 10px;}
+.collapse-btn { display: inline-block; width: 19px; font-size: 1.45em; margin-right: 10px;}
 
 /* New Thread Page */
 .info-box { margin-bottom: 10px; }
